# pyroid

./: CHANGELOG.md  Cargo.toml  README.md  build.rs  pyproject.toml
.github/workflows/: publish.yml  semantic-release.yml  tests.yml
benchmarks/: pyroid_benchmarks.ipynb
docs/api/: image_ops.md  index.md  ml_ops.md
docs/guides/: getting_started.md
examples/: image_examples.py  ml_examples.py
python/pyroid/: __init__.py
src/: dataframe_ops.rs  image_ops.rs  io_ops.rs  lib.rs  ml_ops.rs  text_nlp_ops.rs
