[package]
name = "pyroid"
version = "0.1.0"
edition = "2021"
authors = ["Andrew O", "Pyroid Team"]
description = "High-performance Rust functions for Python"
readme = "README.md"
license = "MIT"
repository = "https://github.com/ao/pyroid"

[lib]
name = "pyroid"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.18", features = ["extension-module"] }
pyo3-asyncio = { version = "0.18", features = ["tokio-runtime"] }
rayon = "1.7"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
regex = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
reqwest = { version = "0.11", features = ["json", "stream", "blocking"] }
ndarray = "0.15"
ndarray-linalg = { version = "0.16", features = ["openblas-static"] }
ndarray-stats = "0.5"
polars = { version = "0.30", features = ["lazy", "random", "dtype-full", "parquet", "csv", "json"] }
arrow = "40.0"
csv = "1.2"
tokenizers = "0.13"
image = "0.24"
imageproc = "0.23"
nalgebra = "0.32"
rand = "0.8"
num_cpus = "1.15"
flate2 = "1.0"

[dev-dependencies]
criterion = "0.4"
tokio-test = "0.4"