[package]
name = "pyroid"
version = "0.1.0"
edition = "2021"
authors = ["Andrew O", "Pyroid Team"]
description = "High-performance Rust functions for Python"
readme = "README.md"
license = "MIT"
repository = "https://github.com/ao/pyroid"

[lib]
name = "pyroid"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.0", features = ["extension-module", "auto-initialize", "abi3-py38"] }
rayon = "1.10.0"
tokio = { version = "1.44.1", features = ["full"] }
futures = "0.3.31"
image = "0.24.9"
reqwest = { version = "0.12.15", features = ["json", "stream"] }
polars = { version = "0.46.0", features = ["lazy", "dtype-full", "parquet", "json", "csv"] }
ndarray = "0.16.1"
ndarray-stats = "0.6.0"
tokenizers = "0.21.1"
regex = "1.10.3"
base64 = "0.21.7"
flate2 = "1.0.28"
serde_json = "1.0.114"
num_cpus = "1.16.0"
pyo3-asyncio = { version = "0.20.0", features = ["tokio-runtime"] }
csv = "1.3.0"
imageproc = "0.23.0"

[build-dependencies]
pyo3-build-config = "0.20.0"
pyo3-asyncio = { version = "0.20.0", features = ["tokio-runtime"] }
rayon = "1.7"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
regex = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22.1"
reqwest = { version = "0.12.15", features = ["json", "stream", "blocking"] }
ndarray = "0.16.1"
ndarray-linalg = { version = "0.17", features = ["openblas-static"] }
ndarray-stats = "0.6.0"
polars = { version = "0.46.0", features = ["lazy", "random", "dtype-full", "parquet", "csv", "json"] }
arrow = "54.3.1"
csv = "1.2"
tokenizers = "0.21.1"
image = "0.25.6"
imageproc = "0.25.0"
nalgebra = "0.33.2"
rand = "0.9.0"
num_cpus = "1.15"
flate2 = "1.0"
tempfile = "3.10.1"

[dev-dependencies]
criterion = "0.5.1"
tokio-test = "0.4"